--- a/main.less
+++ b/main.less
@@ -1,3 +1,9 @@
+/**
+ * Theme BoilerPlate Copyright (c) 2014 Miguel Castillo.
+ *
+ * Licensed under MIT
+ */
+
 .CodeMirror-scroll {
     padding-left: 2px;
     background-color: #696969;
